# Algo

./: .gitignore  CMakeLists.txt  Makefile  README.md  benchmarkSC.c  main.c
algorithms/autocorrelation/: CMakeLists.txt  autocorrelation.c  autocorrelation.h  autocorrelation_stepcount.c  autocorrelation_stepcount.h
algorithms/autocorrelation2/: CMakeLists.txt  autocorrelation2.c  autocorrelation2.h
algorithms/bangle_simple/: CMakeLists.txt  bangle_simple.c  bangle_simple.h
algorithms/dummy/: CMakeLists.txt  dummyStepCounter.c  dummyStepCounter.h
algorithms/espruino/: CMakeLists.txt  espruino.h  stepcount.c
algorithms/fft/: CMakeLists.txt  fft.c  fft.h
algorithms/movement_detection/: CMakeLists.txt  movement_detection.c  movement_detection.h
algorithms/oxford/: CMakeLists.txt  config.h  detectionStage.c  oxford_step_counter.c  oxford_step_counter.h  preProcessingStage.c  preProcessingStage.h  ringbuffer.h
algorithms/panTompkins/: CMakeLists.txt  panTompkins.c  panTompkins.h
src/: benchmarkSC.c  detection.h  lowpass_filter.h  movement_detection.c  movement_detection.h  rolling_stats.h  types.h
src/autocorrelation/: autocorrelation.h  autocorrelation_stepcount.c  autocorrelation_stepcount.h
src/autocorrelation2/: autocorrelation2.c  autocorrelation2.h
src/bangle_simple/: bangle_simple.c  bangle_simple.h
src/buffer/: buffer.h
src/dummy/: dummyStepCounter.c  dummyStepCounter.h
src/espruino/: espruino.h  stepcount.h
src/fft/: fft.c  fft.h
src/movement_detection/: movement_detection.c  movement_detection.h
src/oxford/: StepCountingAlgo.c  (+12 more)
(+9 files in other folders)
