cmake_minimum_required(VERSION 3.5)
project(stepcounter)

add_subdirectory(utils/lowpass_filter)
add_subdirectory(utils/buffer)
add_subdirectory(algorithms/movement_detection)
add_subdirectory(algorithms/dummy)
add_subdirectory(algorithms/autocorrelation)
add_subdirectory(algorithms/autocorrelation2)
add_subdirectory(algorithms/bangle_simple)
add_subdirectory(algorithms/fft)
add_subdirectory(algorithms/espruino)
add_subdirectory(algorithms/panTompkins)
add_subdirectory(algorithms/oxford)

add_executable(stepcounter main.c)

target_link_libraries(stepcounter lowpass_filter)
target_link_libraries(stepcounter buffer)
target_link_libraries(stepcounter movement_detection)
target_link_libraries(stepcounter dummy)
target_link_libraries(stepcounter autocorrelation)
target_link_libraries(stepcounter autocorrelation2)
target_link_libraries(stepcounter bangle_simple)
target_link_libraries(stepcounter fft)
target_link_libraries(stepcounter espruino)
target_link_libraries(stepcounter panTompkins)
target_link_libraries(stepcounter oxford)
